--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -1,5 +1,5 @@
 <template name="Recipe">
-    <article class="recipe">
+    <article class="recipe {{#if inMenu}}in-menu{{/if}}">
         <h3>{{name}}</h3>
         <p>{{description}}</p>
         <p>
@@ -7,5 +7,11 @@
                 <span class="ingredient">{{name}} - {{amount}}</span>
             {{/each}}
         </p>
+        <a href="/recipe/{{_id}}">View Details</a>
+        {{#if inMenu}}
+            <button class="btn-deny toggle-menu">Remove From Menu</button>
+        {{else}}
+            <button class="btn-primary toggle-menu">Add To Menu</button>
+        {{/if}}
     </article>
 </template>
