--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
-  <title>cooking-book</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+    <title>cooking-book</title>
 </head>
 
 
