--- a/client/recipes/NewRecipe.html
+++ b/client/recipes/NewRecipe.html
@@ -1,6 +1,8 @@
 <template name="NewRecipe">
-    <div class="new-recipe-container">
-        <i class="fa fa-close"></i>
-        {{> quickForm collection="Recipes" id="insertRecipeForm" type="insert" class="new-recipe-form"}}
-    </div>
+    {{#transition in="slideInDown" out="slideOutUp"}}
+        <div class="new-recipe-container">
+            <i class="fa fa-close"></i>
+            {{> quickForm collection="Recipes" id="insertRecipeForm" type="insert" class="new-recipe-form"}}
+        </div>
+    {{/transition}}
 </template>
