--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -1,23 +1,25 @@
 <template name="Recipe">
-    <article class="recipe {{#if inMenu}}in-menu{{/if}}">
-        <h3>{{name}}</h3>
-        {{# if editMode}}
-            {{> quickForm collection="Recipes" id=updateRecipeId type="update" doc=this autosave=true }}
-        {{else}}
-            <p>{{description}}</p>
-            <p>
-                {{#each ingredients}}
-                    <span class="ingredient">{{name}} - {{amount}}</span>
-                {{/each}}
-            </p>
-            <a href="/recipe/{{_id}}">View Details</a>
-            {{#if inMenu}}
-                <button class="btn-deny toggle-menu">Remove From Menu</button>
+    {{#transition in="bounceIn" out="bounceOut"}}
+        <article class="recipe {{#if inMenu}}in-menu{{/if}}">
+            <h3>{{name}}</h3>
+            {{# if editMode}}
+                {{> quickForm collection="Recipes" id=updateRecipeId type="update" doc=this autosave=true }}
             {{else}}
-                <button class="btn-primary toggle-menu">Add To Menu</button>
+                <p>{{description}}</p>
+                <p>
+                    {{#each ingredients}}
+                        <span class="ingredient">{{name}} - {{amount}}</span>
+                    {{/each}}
+                </p>
+                <a href="/recipe/{{_id}}">View Details</a>
+                {{#if inMenu}}
+                    <button class="btn-deny toggle-menu">Remove From Menu</button>
+                {{else}}
+                    <button class="btn-primary toggle-menu">Add To Menu</button>
+                {{/if}}
             {{/if}}
-        {{/if}}
-        <i class="fa fa-pencil"></i>
-        <i class="fa fa-trash"></i>
-    </article>
+            <i class="fa fa-pencil"></i>
+            <i class="fa fa-trash"></i>
+        </article>
+    {{/transition}}
 </template>
